crates/cyrus-core/tests/ui/fail/bvec_wrong_brand.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/fail/bvec_wrong_brand.rs:20:25
   |
13 |         let v = BVec::new(&dim, &brand1, vec![1, 2, 3]);
   |             - `v` declared here, outside of the closure body
...
16 |         dim.with_brand(|brand2| {
   |                         ------ `brand2` is a reference that is only valid in the closure body
...
20 |                 let _ = v.get(i);
   |                         ^^^^^^^^ `brand2` escapes the closure body here
   |
   = note: requirement occurs because of the type `BVec<'_, i32>`, which makes the generic argument `'_` invariant
   = note: the struct `BVec<'id, T>` is invariant over the parameter `'id`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/fail/bvec_wrong_brand.rs:18:22
   |
12 |     let result = dim.with_brand(|brand1| {
   |                                  ------
   |                                  |
   |                                  `brand1` is a reference that is only valid in the closure body
   |                                  has type `Brand<'1>`
...
18 |             for i in dim.indices(&brand2) {
   |                      ^^^^^^^^^^^^^^^^^^^^
   |                      |
   |                      `brand1` escapes the closure body here
   |                      argument requires that `'1` must outlive `'static`
